# keycloak-service-to-service

./: Dockerfile  README.md  docker-compose.yml  keycloak.mv.db
.devcontainer/: devcontainer.json
authserver/: authserver.service  go.mod  go.sum  main.go  main_test.go
cpp/: CMakeLists.txt  main.cpp
go/: main.go
python/: main.py
